--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -127,8 +127,8 @@ document.getElementById("fRes"+id).innerHTML = `<strong>Total:</strong><h2>£${t
 // ================= GUTTERS =================
 const gutters = [
 {name:"Gutter Clearing (£4.5/m)", img:"/gutter-clearing.webp", rate:4.5},
-{name:"Gutter & Fascia Cleaning (£4/m)", img:"/Cleaned-gutters-before-after.webp", rate:4},
-{name:"Gutter Replacement (£30/m)", img:"/Gutter-alignment.webp", rate:30}
+{name:"Gutter & Fascia Cleaning (£4/m)", img:"/cleaned-gutters-before-after.webp", rate:4},
+{name:"Gutter Replacement (£30/m)", img:"/gutter-alignment.webp", rate:30}
 ];
 
 const gutterContainer = document.getElementById("gutterContainer");
