--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Quote Calculators</title>
 <link rel="canonical" href="https://homerepairs4u.com/quote-calculator/">
+
 <style>
 body { font-family: 'Montserrat', sans-serif; background: #f4f7f8; padding: 30px; margin: 0; }
 h1 { text-align: center; margin-bottom: 10px; }
@@ -13,28 +14,96 @@ h1 { text-align: center; margin-bottom: 10px; }
 .calc-button, .view-image-button, .quote-button, .close-button {
 cursor: pointer; border: none; border-radius: 8px; transition: 0.3s;
 }
+
 .calc-button { background: #ff6b6b; color: white; padding: 10px 20px; margin-bottom: 20px; }
 .calc-button:hover { background: #ff4757; }
+
 .view-image-button { background: #1e90ff; color: white; padding: 6px 12px; margin-bottom: 5px; }
 .view-image-button:hover { background: #0077cc; }
+
 .quote-button { margin-top: 20px; width: 100%; background: #1e90ff; color: white; padding: 10px; }
 .quote-button:hover { background: #0077cc; }
+
 .close-button { margin-top: 10px; width: 100%; background: #888; color: white; padding: 8px; }
 .close-button:hover { background: #555; }
 
-.calculators-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 30px; }
-.calc-container { position: relative; border-radius: 12px; min-height: 350px; display: flex; flex-direction: column; justify-content: flex-end; color: #fff; padding: 20px; background-size: cover; background-position: center; overflow: hidden; box-shadow: 0 8px 20px rgba(0,0,0,0.1); }
-.calc-container::before { content: ''; position: absolute; inset: 0; background: rgba(0,0,0,0.4); z-index: 0; }
-.calc-container > * { position: relative; z-index: 1; }
+.calculators-grid {
+display: grid;
+grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+gap: 30px;
+}
 
-.calculator { display: none; margin-top: 15px; padding: 20px; border-radius: 12px; background: #fff; color: #2a2f45; }
+.calc-container {
+position: relative;
+border-radius: 12px;
+min-height: 350px;
+display: flex;
+flex-direction: column;
+justify-content: flex-end;
+color: #fff;
+padding: 20px;
+background-size: cover;
+background-position: center;
+overflow: hidden;
+box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+}
+
+.calc-container::before {
+content: '';
+position: absolute;
+inset: 0;
+background: rgba(0,0,0,0.4);
+z-index: 0;
+}
+
+.calc-container > * {
+position: relative;
+z-index: 1;
+}
+
+.calculator {
+display: none;
+margin-top: 15px;
+padding: 20px;
+border-radius: 12px;
+background: #fff;
+color: #2a2f45;
+}
+
 label { display:block; margin-top:15px; }
-input, select { width:100%; padding:8px; margin-top:5px; }
 
-.result { margin-top:20px; background:#eef6ff; padding:15px; border-radius:8px; }
-.highlight { font-weight:bold; color:#ff4757; }
-.image-modal { display: none; position: fixed; z-index: 999; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); }
-.image-modal img { display: block; margin: 5% auto; max-width: 80%; max-height: 300px; border-radius: 10px; }
+input, select {
+width:100%;
+padding:8px;
+margin-top:5px;
+}
+
+.result {
+margin-top:20px;
+background:#eef6ff;
+padding:15px;
+border-radius:8px;
+}
+
+.image-modal {
+display: none;
+position: fixed;
+z-index: 999;
+left: 0;
+top: 0;
+width: 100%;
+height: 100%;
+background: rgba(0,0,0,0.8);
+}
+
+.image-modal img {
+display: block;
+margin: 5% auto;
+max-width: 80%;
+max-height: 300px;
+border-radius: 10px;
+}
+
 hr { margin:60px 0; }
 
 @media (max-width: 768px) {
@@ -46,6 +115,7 @@ input, select { font-size: 16px; }
 }
 </style>
 </head>
+
 <body>
 
 <!-- ================= FENCING ================= -->
@@ -66,22 +136,38 @@ input, select { font-size: 16px; }
 <div class="calculators-grid" id="gutterContainer"></div>
 </div>
 
+<hr>
+
+<!-- ================= PRESSURE WASHING ================= -->
+<h1>Pressure Washing Quote</h1>
+<p class="intro">Click below to view pressure washing options.</p>
+<button class="calc-button" onclick="toggleSection('pressureSection')">View Options</button>
+<div id="pressureSection" style="display:none;">
+<div class="calculators-grid" id="pressureContainer"></div>
+</div>
+
 <script>
-// TOGGLE SECTION
+
 function toggleSection(id){
 const el = document.getElementById(id);
 el.style.display = el.style.display==="block"?"none":"block";
 }
-// TOGGLE CALCULATOR
+
 function toggleCalculator(id){
 const el = document.getElementById(id);
 el.style.display = el.style.display==="block"?"none":"block";
 }
-// IMAGE MODAL
-function openImage(id){ document.getElementById(id).style.display="block"; }
-function closeImage(el){ el.style.display="none"; }
 
-// ================= FENCING =================
+function openImage(id){
+document.getElementById(id).style.display="block";
+}
+
+function closeImage(el){
+el.style.display="none";
+}
+
+/* ================= FENCING ================= */
+
 const fences = [
 {name:"Closeboard Featheredge", img:"/images/closeboard.webp", prices:{4:22,5:27,6:32}},
 {name:"Double Side Hit Miss", img:"/images/double-hit-miss.webp", prices:{4:24,5:29,6:34}},
@@ -92,13 +178,16 @@ const fences = [
 ];
 
 const fenceContainer = document.getElementById("fenceContainer");
+
 fences.forEach((f,i)=>{
 const id = i+1;
 fenceContainer.innerHTML += `
 <div class="calc-container" style="background-image:url('${f.img}')">
 <h3>${f.name}</h3>
 <button class="view-image-button" onclick="openImage('fImg${id}')">View Image</button>
-<div id="fImg${id}" class="image-modal" onclick="closeImage(this)"><img src="${f.img}"></div>
+<div id="fImg${id}" class="image-modal" onclick="closeImage(this)">
+<img src="${f.img}">
+</div>
 <button class="calc-button" onclick="toggleCalculator('f${id}')">Get Quote</button>
 <div class="calculator" id="f${id}">
 <label>Length (m)</label>
@@ -121,10 +210,13 @@ let len = parseFloat(document.getElementById("fLen"+id).value);
 let height = document.getElementById("fHeight"+id).value;
 let price = fences[id-1].prices[height];
 let total = len * price;
-document.getElementById("fRes"+id).innerHTML = `<strong>Total:</strong><h2>£${total.toFixed(2)}</h2><a href="tel:07735873694">Call Now</a>`;
+document.getElementById("fRes"+id).innerHTML =
+`<strong>Total:</strong><h2>£${total.toFixed(2)}</h2>
+<a href="tel:07735873694">Call Now</a>`;
 }
 
-// ================= GUTTERS =================
+/* ================= GUTTERS ================= */
+
 const gutters = [
 {name:"Gutter Clearing (£4.5/m)", img:"/images/gutter-clearing.webp", rate:4.5},
 {name:"Gutter & Fascia Cleaning (£4/m)", img:"/images/cleaned-gutters-before-after.webp", rate:4},
@@ -132,13 +224,16 @@ const gutters = [
 ];
 
 const gutterContainer = document.getElementById("gutterContainer");
+
 gutters.forEach((g,i)=>{
 const id = i+1;
 gutterContainer.innerHTML += `
 <div class="calc-container" style="background-image:url('${g.img}')">
 <h3>${g.name}</h3>
 <button class="view-image-button" onclick="openImage('gImg${id}')">View Image</button>
-<div id="gImg${id}" class="image-modal" onclick="closeImage(this)"><img src="${g.img}"></div>
+<div id="gImg${id}" class="image-modal" onclick="closeImage(this)">
+<img src="${g.img}">
+</div>
 <button class="calc-button" onclick="toggleCalculator('g${id}')">Get Quote</button>
 <div class="calculator" id="g${id}">
 <label>Length (m)</label>
@@ -154,8 +249,52 @@ function calcGutter(id){
 let len = parseFloat(document.getElementById("gLen"+id).value);
 let rate = gutters[id-1].rate;
 let total = len * rate;
-document.getElementById("gRes"+id).innerHTML = `<strong>Total:</strong><h2>£${total.toFixed(2)}</h2><a href="tel:07735873694">Call Now</a>`;
+document.getElementById("gRes"+id).innerHTML =
+`<strong>Total:</strong><h2>£${total.toFixed(2)}</h2>
+<a href="tel:07735873694">Call Now</a>`;
 }
+
+/* ================= PRESSURE WASHING ================= */
+
+const pressure = [
+{name:"Driveways (£3.00/m²)", img:"/mages-my-images/driveways.webp", rate:3},
+{name:"Roof (£8.00/m)", img:"/mages-my-images/roof.webp", rate:8},
+{name:"Patio (£3.00/m²)", img:"/mages-my-images/patio.webp", rate:3},
+{name:"Walls incl. House (£4.00/m²)", img:"/mages-my-images/walls.webp", rate:4},
+{name:"Fence (£2.50/m²)", img:"/mages-my-images/fence.webp", rate:2.5}
+];
+
+const pressureContainer = document.getElementById("pressureContainer");
+
+pressure.forEach((p,i)=>{
+const id = i+1;
+pressureContainer.innerHTML += `
+<div class="calc-container" style="background-image:url('${p.img}')">
+<h3>${p.name}</h3>
+<button class="view-image-button" onclick="openImage('pImg${id}')">View Image</button>
+<div id="pImg${id}" class="image-modal" onclick="closeImage(this)">
+<img src="${p.img}">
+</div>
+<button class="calc-button" onclick="toggleCalculator('p${id}')">Get Quote</button>
+<div class="calculator" id="p${id}">
+<label>Area / Length</label>
+<input type="number" id="pInput${id}" value="10">
+<button class="quote-button" onclick="calcPressure(${id})">Generate</button>
+<div class="result" id="pRes${id}"></div>
+</div>
+</div>
+`;
+});
+
+function calcPressure(id){
+let input = parseFloat(document.getElementById("pInput"+id).value);
+let rate = pressure[id-1].rate;
+let total = input * rate;
+document.getElementById("pRes"+id).innerHTML =
+`<strong>Total:</strong><h2>£${total.toFixed(2)}</h2>
+<a href="tel:07735873694">Call Now</a>`;
+}
+
 </script>
 
 </body>
