--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -4,112 +4,50 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Quote Calculators</title>
-
 <style>
 body { font-family: 'Montserrat', sans-serif; background: #f4f7f8; padding: 30px; margin: 0; }
 h1 { text-align: center; margin-bottom: 10px; }
 .intro { text-align: center; margin-bottom: 20px; font-size: 16px; color: #555; }
 
-.calc-button, .view-image-button, .quote-button {
+.calc-button, .view-image-button, .quote-button, .close-button {
 cursor: pointer; border: none; border-radius: 8px; transition: 0.3s;
 }
-
 .calc-button { background: #ff6b6b; color: white; padding: 10px 20px; margin-bottom: 20px; }
 .calc-button:hover { background: #ff4757; }
-
 .view-image-button { background: #1e90ff; color: white; padding: 6px 12px; margin-bottom: 5px; }
 .view-image-button:hover { background: #0077cc; }
-
 .quote-button { margin-top: 20px; width: 100%; background: #1e90ff; color: white; padding: 10px; }
 .quote-button:hover { background: #0077cc; }
+.close-button { margin-top: 10px; width: 100%; background: #888; color: white; padding: 8px; }
+.close-button:hover { background: #555; }
 
-.calculators-grid {
-display: grid;
-grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-gap: 30px;
-}
-
-.calc-container {
-position: relative;
-border-radius: 12px;
-min-height: 350px;
-display: flex;
-flex-direction: column;
-justify-content: flex-end;
-color: #fff;
-padding: 20px;
-background-size: cover;
-background-position: center;
-overflow: hidden;
-box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-}
-
-.calc-container::before {
-content: '';
-position: absolute;
-inset: 0;
-background: rgba(0,0,0,0.4);
-z-index: 0;
-}
-
+.calculators-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 30px; }
+.calc-container { position: relative; border-radius: 12px; min-height: 350px; display: flex; flex-direction: column; justify-content: flex-end; color: #fff; padding: 20px; background-size: cover; background-position: center; overflow: hidden; box-shadow: 0 8px 20px rgba(0,0,0,0.1); }
+.calc-container::before { content: ''; position: absolute; inset: 0; background: rgba(0,0,0,0.4); z-index: 0; }
 .calc-container > * { position: relative; z-index: 1; }
 
-.calculator {
-display: none;
-margin-top: 15px;
-padding: 20px;
-border-radius: 12px;
-background: #fff;
-color: #2a2f45;
-}
-
+.calculator { display: none; margin-top: 15px; padding: 20px; border-radius: 12px; background: #fff; color: #2a2f45; }
 label { display:block; margin-top:15px; }
+input, select { width:100%; padding:8px; margin-top:5px; }
 
-input, select {
-width:100%;
-padding:8px;
-margin-top:5px;
-}
-
-.result {
-margin-top:20px;
-background:#eef6ff;
-padding:15px;
-border-radius:8px;
-}
-
-.image-modal {
-display: none;
-position: fixed;
-z-index: 999;
-left: 0;
-top: 0;
-width: 100%;
-height: 100%;
-background: rgba(0,0,0,0.8);
-}
-
-.image-modal img {
-display: block;
-margin: 5% auto;
-max-width: 80%;
-max-height: 300px;
-border-radius: 10px;
-}
-
+.result { margin-top:20px; background:#eef6ff; padding:15px; border-radius:8px; }
+.highlight { font-weight:bold; color:#ff4757; }
+.image-modal { display: none; position: fixed; z-index: 999; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); }
+.image-modal img { display: block; margin: 5% auto; max-width: 80%; max-height: 300px; border-radius: 10px; }
 hr { margin:60px 0; }
 
 @media (max-width: 768px) {
 body { padding: 10px; }
+h1 { font-size: 24px; }
 .calculators-grid { gap: 20px; }
+input, select { font-size: 16px; }
+.result { font-size: 15px; }
 }
 </style>
 </head>
-
 <body>
 
 <!-- ================= FENCING ================= -->
-
 <h1>Fencing Quote Calculator</h1>
 <p class="intro">Click below to view fencing options.</p>
 <button class="calc-button" onclick="toggleSection('fencingSection')">View Options</button>
@@ -120,7 +58,6 @@ body { padding: 10px; }
 <hr>
 
 <!-- ================= GUTTERS ================= -->
-
 <h1>Gutter Services Quote</h1>
 <p class="intro">Click below to view gutter service options.</p>
 <button class="calc-button" onclick="toggleSection('gutterSection')">View Options</button>
@@ -131,7 +68,6 @@ body { padding: 10px; }
 <hr>
 
 <!-- ================= PRESSURE WASHING ================= -->
-
 <h1>Pressure Washing Quote</h1>
 <p class="intro">Click below to view pressure washing options.</p>
 <button class="calc-button" onclick="toggleSection('pressureSection')">View Options</button>
@@ -140,22 +76,19 @@ body { padding: 10px; }
 </div>
 
 <script>
-
+// Toggle sections and calculators
 function toggleSection(id){
 const el = document.getElementById(id);
 el.style.display = el.style.display==="block"?"none":"block";
 }
-
 function toggleCalculator(id){
 const el = document.getElementById(id);
 el.style.display = el.style.display==="block"?"none":"block";
 }
-
 function openImage(id){ document.getElementById(id).style.display="block"; }
 function closeImage(el){ el.style.display="none"; }
 
-/* ================= FENCING ================= */
-
+// ================= FENCING =================
 const fences = [
 {name:"Closeboard Featheredge", img:"/images/closeboard.webp", prices:{4:22,5:27,6:32}},
 {name:"Double Side Hit Miss", img:"/images/double-hit-miss.webp", prices:{4:24,5:29,6:34}},
@@ -166,16 +99,13 @@ const fences = [
 ];
 
 const fenceContainer = document.getElementById("fenceContainer");
-
 fences.forEach((f,i)=>{
 const id = i+1;
 fenceContainer.innerHTML += `
 <div class="calc-container" style="background-image:url('${f.img}')">
 <h3>${f.name}</h3>
 <button class="view-image-button" onclick="openImage('fImg${id}')">View Image</button>
-<div id="fImg${id}" class="image-modal" onclick="closeImage(this)">
-<img src="${f.img}">
-</div>
+<div id="fImg${id}" class="image-modal" onclick="closeImage(this)"><img src="${f.img}"></div>
 <button class="calc-button" onclick="toggleCalculator('f${id}')">Get Quote</button>
 <div class="calculator" id="f${id}">
 <label>Length (m)</label>
@@ -194,27 +124,16 @@ fenceContainer.innerHTML += `
 });
 
 function calcFence(id){
-
 let len = parseFloat(document.getElementById("fLen"+id).value);
-let heightFt = parseFloat(document.getElementById("fHeight"+id).value);
-
-let materialRate = fences[id-1].prices[heightFt];
-let materialTotal = len * materialRate;
-
-// ✅ FIXED LABOUR £50 PER METRE LENGTH
-let labourTotal = len * 50;
-
-let total = materialTotal + labourTotal;
-
-document.getElementById("fRes"+id).innerHTML = `
-<strong>Material:</strong> £${materialTotal.toFixed(2)}<br>
-<strong>Labour:</strong> £${labourTotal.toFixed(2)}<br><br>
-<h2>Total: £${total.toFixed(2)}</h2>
-<a href="tel:07735873694">Call Now</a>`;
+let height = document.getElementById("fHeight"+id).value;
+let price = fences[id-1].prices[height];
+let materialCost = len * price;
+let labourCost = len * 50; // Labour £50 per metre
+let total = materialCost + labourCost;
+document.getElementById("fRes"+id).innerHTML = `<strong>Total:</strong><h2>£${total.toFixed(2)}</h2><a href="tel:07735873694">Call Now</a>`;
 }
 
-/* ================= GUTTERS ================= */
-
+// ================= GUTTERS =================
 const gutters = [
 {name:"Gutter Clearing (£4.5/m)", img:"/images/gutter-clearing.webp", rate:4.5},
 {name:"Gutter & Fascia Cleaning (£4/m)", img:"/images/cleaned-gutters-before-after.webp", rate:4},
@@ -222,16 +141,13 @@ const gutters = [
 ];
 
 const gutterContainer = document.getElementById("gutterContainer");
-
 gutters.forEach((g,i)=>{
 const id = i+1;
 gutterContainer.innerHTML += `
 <div class="calc-container" style="background-image:url('${g.img}')">
 <h3>${g.name}</h3>
 <button class="view-image-button" onclick="openImage('gImg${id}')">View Image</button>
-<div id="gImg${id}" class="image-modal" onclick="closeImage(this)">
-<img src="${g.img}">
-</div>
+<div id="gImg${id}" class="image-modal" onclick="closeImage(this)"><img src="${g.img}"></div>
 <button class="calc-button" onclick="toggleCalculator('g${id}')">Get Quote</button>
 <div class="calculator" id="g${id}">
 <label>Length (m)</label>
@@ -247,11 +163,44 @@ function calcGutter(id){
 let len = parseFloat(document.getElementById("gLen"+id).value);
 let rate = gutters[id-1].rate;
 let total = len * rate;
-document.getElementById("gRes"+id).innerHTML =
-`<h2>Total: £${total.toFixed(2)}</h2>
-<a href="tel:07735873694">Call Now</a>`;
+document.getElementById("gRes"+id).innerHTML = `<strong>Total:</strong><h2>£${total.toFixed(2)}</h2><a href="tel:07735873694">Call Now</a>`;
 }
 
+// ================= PRESSURE WASHING =================
+const pressure = [
+{name:"Driveways (£3/m²)", img:"/images/my-images/driveway.webp", rate:3},
+{name:"Roof (£8/m²)", img:"/images/my-images/roof.webp", rate:8},
+{name:"Patio (£3/m²)", img:"/images/my-images/patio.webp", rate:3},
+{name:"Walls (£4/m²)", img:"/images/my-images/walls.webp", rate:4},
+{name:"Fence (£2.5/m²)", img:"/images/my-images/fence.webp", rate:2.5}
+];
+
+const pressureContainer = document.getElementById("pressureContainer");
+pressure.forEach((p,i)=>{
+const id = i+1;
+pressureContainer.innerHTML += `
+<div class="calc-container" style="background-image:url('${p.img}')">
+<h3>${p.name}</h3>
+<button class="view-image-button" onclick="openImage('pImg${id}')">View Image</button>
+<div id="pImg${id}" class="image-modal" onclick="closeImage(this)"><img src="${p.img}"></div>
+<button class="calc-button" onclick="toggleCalculator('p${id}')">Get Quote</button>
+<div class="calculator" id="p${id}">
+<label>Area (m²)</label>
+<input type="number" id="pArea${id}" value="50">
+<button class="quote-button" onclick="calcPressure(${id})">Generate</button>
+<div class="result" id="pRes${id}"></div>
+</div>
+</div>
+`;
+});
+
+function calcPressure(id){
+let area = parseFloat(document.getElementById("pArea"+id).value);
+let rate = pressure[id-1].rate;
+let total = area * rate;
+document.getElementById("pRes"+id).innerHTML = `<h2>Total: £${total.toFixed(2)}</h2><a href="tel:07735873694">Call Now</a>`;
+}
 </script>
+
 </body>
 </html>
