--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -168,11 +168,11 @@ document.getElementById("gRes"+id).innerHTML = `<strong>Total:</strong><h2>£${t
 
 // ================= PRESSURE WASHING =================
 const pressure = [
-{name:"Driveways (£3/m²)", img:"/images/my-images/driveway.webp", rate:3},
-{name:"Roof (£8/m²)", img:"/images/my-images/roof.webp", rate:8},
-{name:"Patio (£3/m²)", img:"/images/my-images/patio.webp", rate:3},
-{name:"Walls (£4/m²)", img:"/images/my-images/walls.webp", rate:4},
-{name:"Fence (£2.5/m²)", img:"/images/my-images/fence.webp", rate:2.5}
+{name:"Driveways (£3/m²)", img:"/images/pressure-washing-driveway.webp", rate:3},
+{name:"Roof (£8/m²)", img:"/images/no-image.webp", rate:8},
+{name:"Patio (£3/m²)", img:"/images/pressure-washing-patios.webp", rate:3},
+{name:"Walls (£4/m²)", img:"/images/pressure-washing-walls.webp", rate:4},
+{name:"Fence (£2.5/m²)", img:"/images/pressure-wash-decking.webp", rate:2.5}
 ];
 
 const pressureContainer = document.getElementById("pressureContainer");
