--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Quote Calculators</title>
+<link rel="canonical" href="https://homerepairs4u.com/quote-calculator/">
 <style>
 body { font-family: 'Montserrat', sans-serif; background: #f4f7f8; padding: 30px; margin: 0; }
 h1 { text-align: center; margin-bottom: 10px; }
@@ -68,23 +69,35 @@ input, select { font-size: 16px; }
 <hr>
 
 <!-- ================= PRESSURE WASHING ================= -->
-<h1>Pressure Washing Quote</h1>
+<h1>Pressure Washing</h1>
 <p class="intro">Click below to view pressure washing options.</p>
 <button class="calc-button" onclick="toggleSection('pressureSection')">View Options</button>
 <div id="pressureSection" style="display:none;">
 <div class="calculators-grid" id="pressureContainer"></div>
 </div>
 
+<hr>
+
+<!-- ================= EXTERIOR DECORATING ================= -->
+<h1>Exterior Decorating</h1>
+<p class="intro">Click below to view exterior decorating options.</p>
+<button class="calc-button" onclick="toggleSection('decoratingSection')">View Options</button>
+<div id="decoratingSection" style="display:none;">
+<div class="calculators-grid" id="decoratingContainer"></div>
+</div>
+
 <script>
-// Toggle sections and calculators
+// TOGGLE SECTION
 function toggleSection(id){
 const el = document.getElementById(id);
 el.style.display = el.style.display==="block"?"none":"block";
 }
+// TOGGLE CALCULATOR
 function toggleCalculator(id){
 const el = document.getElementById(id);
 el.style.display = el.style.display==="block"?"none":"block";
 }
+// IMAGE MODAL
 function openImage(id){ document.getElementById(id).style.display="block"; }
 function closeImage(el){ el.style.display="none"; }
 
@@ -119,18 +132,17 @@ fenceContainer.innerHTML += `
 <button class="quote-button" onclick="calcFence(${id})">Generate</button>
 <div class="result" id="fRes${id}"></div>
 </div>
-</div>
-`;
+</div>`;
 });
 
 function calcFence(id){
 let len = parseFloat(document.getElementById("fLen"+id).value);
 let height = document.getElementById("fHeight"+id).value;
 let price = fences[id-1].prices[height];
-let materialCost = len * price;
-let labourCost = len * 50; // Labour £50 per metre
-let total = materialCost + labourCost;
-document.getElementById("fRes"+id).innerHTML = `<strong>Total:</strong><h2>£${total.toFixed(2)}</h2><a href="tel:07735873694">Call Now</a>`;
+let labour = len*50; // £50 per metre length
+let total = len*price + labour;
+document.getElementById("fRes"+id).innerHTML = `<strong>Total:</strong><h2>£${total.toFixed(2)}</h2>
+<a href="tel:07735873694">Call Now</a>`;
 }
 
 // ================= GUTTERS =================
@@ -155,50 +167,107 @@ gutterContainer.innerHTML += `
 <button class="quote-button" onclick="calcGutter(${id})">Generate</button>
 <div class="result" id="gRes${id}"></div>
 </div>
-</div>
-`;
+</div>`;
 });
 
 function calcGutter(id){
 let len = parseFloat(document.getElementById("gLen"+id).value);
 let rate = gutters[id-1].rate;
 let total = len * rate;
-document.getElementById("gRes"+id).innerHTML = `<strong>Total:</strong><h2>£${total.toFixed(2)}</h2><a href="tel:07735873694">Call Now</a>`;
+document.getElementById("gRes"+id).innerHTML = `<strong>Total:</strong><h2>£${total.toFixed(2)}</h2>
+<a href="tel:07735873694">Call Now</a>`;
 }
 
 // ================= PRESSURE WASHING =================
-const pressure = [
-{name:"Driveways (£3/m²)", img:"/images/pressure-washing-driveway.webp", rate:3},
-{name:"Roof (£8/m²)", img:"/images/no-image.webp", rate:8},
-{name:"Patio (£3/m²)", img:"/images/pressure-washing-patios.webp", rate:3},
-{name:"Walls (£4/m²)", img:"/images/pressure-washing-walls.webp", rate:4},
-{name:"Fence (£2.5/m²)", img:"/images/pressure-wash-decking.webp", rate:2.5}
+const pressures = [
+{name:"Driveways (£3/m²)", img:"/my-images/driveway.webp", rate:3},
+{name:"Roof (£8/m)", img:"/my-images/roof.webp", rate:8},
+{name:"Patio (£3/m²)", img:"/my-images/patio.webp", rate:3},
+{name:"Walls (£4/m²)", img:"/my-images/walls.webp", rate:4},
+{name:"Fence (£2.5/m²)", img:"/my-images/fence.webp", rate:2.5}
 ];
 
 const pressureContainer = document.getElementById("pressureContainer");
-pressure.forEach((p,i)=>{
+pressures.forEach((p,i)=>{
 const id = i+1;
 pressureContainer.innerHTML += `
 <div class="calc-container" style="background-image:url('${p.img}')">
 <h3>${p.name}</h3>
-<button class="view-image-button" onclick="openImage('pImg${id}')">View Image</button>
-<div id="pImg${id}" class="image-modal" onclick="closeImage(this)"><img src="${p.img}"></div>
 <button class="calc-button" onclick="toggleCalculator('p${id}')">Get Quote</button>
 <div class="calculator" id="p${id}">
 <label>Area (m²)</label>
-<input type="number" id="pArea${id}" value="50">
+<input type="number" id="pArea${id}" value="10">
 <button class="quote-button" onclick="calcPressure(${id})">Generate</button>
 <div class="result" id="pRes${id}"></div>
 </div>
-</div>
-`;
+</div>`;
 });
 
 function calcPressure(id){
 let area = parseFloat(document.getElementById("pArea"+id).value);
-let rate = pressure[id-1].rate;
+if(isNaN(area)||area<=0){ document.getElementById("pRes"+id).innerHTML="Enter valid area."; return; }
+let rate = pressures[id-1].rate;
 let total = area * rate;
-document.getElementById("pRes"+id).innerHTML = `<h2>Total: £${total.toFixed(2)}</h2><a href="tel:07735873694">Call Now</a>`;
+document.getElementById("pRes"+id).innerHTML = `<strong>Total:</strong><h2>£${total.toFixed(2)}</h2>
+<a href="tel:07735873694">Call Now</a>`;
+}
+
+// ================= EXTERIOR DECORATING =================
+const decoratingServices = [
+{ name:"Exterior House Paint (£12/m²)", img:"/my-images/house-paint.webp", type:"housePaint" },
+{ name:"Steel Gates & Rails (£7/m²)", img:"/my-images/steel-gates.webp", type:"steelGates" },
+{ name:"Fence Panels & Outer Buildings (£3.5/m²)", img:"/my-images/fence-outer.webp", type:"fenceOuter" }
+];
+
+const decoratingContainer = document.getElementById("decoratingContainer");
+decoratingServices.forEach((s,i)=>{
+const id = i+1;
+let innerHTML = `<div class="calc-container" style="background-image:url('${s.img}')">
+<h3>${s.name}</h3>
+<button class="view-image-button" onclick="openImage('dImg${id}')">View Image</button>
+<div id="dImg${id}" class="image-modal" onclick="closeImage(this)"><img src="${s.img}"></div>
+<button class="calc-button" onclick="toggleCalculator('d${id}')">Get Quote</button>
+<div class="calculator" id="d${id}">`;
+
+if(s.type==="housePaint"){
+for(let side=1; side<=4; side++){
+innerHTML += `<label>House Side ${side} (Length × Height m)</label>
+<input type="number" id="hpLen${side}" placeholder="Length" value="10">
+<input type="number" id="hpHeight${side}" placeholder="Height" value="3">`;
+}
+} else {
+innerHTML += `<label>Length (m)</label><input type="number" id="dLen${id}" value="10">
+<label>Height (m)</label><input type="number" id="dHeight${id}" value="3">`;
+}
+
+innerHTML += `<button class="quote-button" onclick="calcDecorating('${s.type}',${id})">Generate</button>
+<div class="result" id="dRes${id}"></div></div></div>`;
+
+decoratingContainer.innerHTML += innerHTML;
+});
+
+function calcDecorating(type,id){
+let total=0;
+if(type==="housePaint"){
+for(let side=1; side<=4; side++){
+let len = parseFloat(document.getElementById("hpLen"+side).value);
+let h = parseFloat(document.getElementById("hpHeight"+side).value);
+if(isNaN(len)||isNaN(h)||len<=0||h<=0){ document.getElementById("dRes"+id).innerHTML="Enter valid measurements."; return; }
+total += len*h*12;
+}
+} else if(type==="steelGates"){
+let len = parseFloat(document.getElementById("dLen"+id).value);
+let h = parseFloat(document.getElementById("dHeight"+id).value);
+if(isNaN(len)||isNaN(h)||len<=0||h<=0){ document.getElementById("dRes"+id).innerHTML="Enter valid measurements."; return; }
+total = len*h*7;
+} else if(type==="fenceOuter"){
+let len = parseFloat(document.getElementById("dLen"+id).value);
+let h = parseFloat(document.getElementById("dHeight"+id).value);
+if(isNaN(len)||isNaN(h)||len<=0||h<=0){ document.getElementById("dRes"+id).innerHTML="Enter valid measurements."; return; }
+total = len*h*3.5;
+}
+document.getElementById("dRes"+id).innerHTML = `<strong>Total:</strong><h2>£${total.toFixed(2)}</h2>
+<a href="tel:07735873694">Call Now</a>`;
 }
 </script>
 
